Fixed contrast color and landmark, h1

--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 </head>
 <body>
     <header role="banner">
-        <h3>Hello World, Testing APIS</h3>
+        <h1>Find your favorite javascript library.</h1>
     </header>
     <main role='main'>
         <div class="center">
             <form class="formClass">
+                
                 <label for="api-Box">JS CDN library search</label>
-                <input type="text" id="api-Box" name="api-Box" class="api-Box">
-        <button type="submit">Go!</button>
+                <input type="text" id="api-Box" name="api-Box" class="api-Box" placeholder="Enter library name here...">
+        <button type="submit">Submit!</button>
         <p>Source: <a href="https://cdnjs.com">http://cdnjs.com</a></p>
         </form>
         </div>
